[gd_scene load_steps=8 format=2]

[ext_resource path="res://GFX/Particles/Glitch_Particle2.png" type="Texture" id=1]
[ext_resource path="res://GFX/Environment/Nature_Tree01.png" type="Texture" id=2]
[ext_resource path="res://Audio/Sounds/electric_hum2.wav" type="AudioStream" id=3]
[ext_resource path="res://Glitches/GlitchTree.gd" type="Script" id=4]
[ext_resource path="res://Glitches/GlitchPuzzle3.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 71.6524

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 30.61
flag_disable_z = true
gravity = Vector3( 0, -98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 57.47
hue_variation = 0.05
hue_variation_random = 1.0

[node name="GlitchTree" type="Area2D"]
collision_layer = 4
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="Sprite"]
amount = 45
process_material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="GlitchHum" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 5.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GlitchPuzzle" parent="CanvasLayer" instance=ExtResource( 5 )]
[connection signal="body_entered" from="." to="." method="_on_GlitchTree_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_GlitchTree_body_exited"]
[connection signal="input_event" from="." to="." method="_on_GlitchTree_input_event"]
